<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProyectoPlataformas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="btnback">btn_back</string>
    <string name="muscle_group">Muscle Group</string>
    <string name="exercise">Exercise</string>
    <string name="guion">-</string>

    <!-- Log in Text-->

    <string name="login">Iniciar sesión</string>
    <string name="password">Contraseña</string>
    <string name="email">Correo</string>
    <string name="my_email">arg211024@uvg.edu.gt</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre">Nombre</string>
    <string name="imagelogin">imageLogIn</string>
    <string name="no_tienes_cuenta_registrate_aqu">¿No tienes cuenta? ¡Registrate aquí!</string>
    <string name="todo">TODO</string>
    <string name="el_primer_paso_para_una_vida_saludable">¡El primer paso para una vida saludable!</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

    
    
    <!-- Muscle Details-->
    
    
    <string name="muscle_name">MUSCLE NAME</string>
    <string name="exercise_details">DESCRIPTION</string>

    <!-- Exercise register Text-->

    <string name="deleteCard">Desliza hacia la derecha para eliminar</string>
    <string name="addRegister">Agregar</string>
    <string name="newRegister">Nuevo Registro</string>
    <string name="descriptionExercise">Descripción</string>
    <string name="exerciseName">Ingrese el nombre del ejercicio</string>
    <string name="amountWeight">Ingrese la cantidad de peso levantado en libras</string>
    <string name="saveRegister">Guardar Registro</string>
    <string name="index">1</string>
    <string name="nameExercise">EXERCISE: </string>
    <string name="weight">WEIGHT: </string>
    <string name="description">DESCRIPTION</string>

    <!-- Exercise update register Text-->
    <string name="updateData">Actualizar información</string>
    <string name="updateRegister">Guardar Registro</string>
    <string name="el_cambio_empieza_ahora">¡El cambio empieza ahora!</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="nombre_de_ejercicio">Nombre de ejercicio</string>
    <string name="m_sculo_trabajado">Músculo trabajado</string>
    <string name="exerciseimage">exerciseImage</string>
    <string name="registrate_ahora">Registrate ahora</string>

    <!-- Delete menu Text-->
    <string name="delete">Delete</string>

</resources>

