<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_item"
    android:layout_width="match_parent"
    android:padding="@dimen/margin_small"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/txtView_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/txtView_exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameExercise"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/txtView_index"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/txtView_exerciseData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtView_exerciseName"/>

    <TextView
        android:id="@+id/txtView_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtView_exerciseData"/>

    <TextView
        android:id="@+id/txtView_weightData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtView_weight"/>

    <TextView
        android:id="@+id/txtView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@id/txtView_index"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>