<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.add.AddingRegisterragment">

    <ImageView
        android:id="@+id/imgView_newRegister_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txtView_newRegister_Message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        android:text="@string/newRegister"
        app:layout_constraintTop_toBottomOf="@id/imgView_newRegister_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editText_fragment_exerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:inputType="text"
        android:textSize="14dp"
        android:padding="10dp"
        android:hint="@string/exerciseName"
        android:background="@drawable/round"
        app:layout_constraintTop_toBottomOf="@id/txtView_newRegister_Message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editTextTextMultiLine_fragment_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:hint="@string/descriptionExercise"
        android:textSize="14sp"
        android:lines="6"
        android:background="@drawable/round"
        app:layout_constraintTop_toBottomOf="@id/editText_fragment_exerciseName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/editText_fragment_amountWeigth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/amountWeight"
        android:textSize="12sp"
        android:background="@drawable/round"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTextMultiLine_fragment_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <Button
        android:id="@+id/btn_saveData_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/saveRegister"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/editText_fragment_amountWeigth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>