<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailsExercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.MuscleDetailsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_muscleDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu"
        />

    <ImageView
        android:id="@+id/imageDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_muscleDetails"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtView_muscleDetails_muscleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muscle_name"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toStartOf="@id/txtView_muscleDetails_exercise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageDetails"/>

    <TextView
        android:id="@+id/txtView_muscleDetails_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@id/txtView_muscleDetails_muscleName"
        app:layout_constraintTop_toBottomOf="@id/imageDetails"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/decription_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_details"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtView_muscleDetails_muscleName"

        />


</androidx.constraintlayout.widget.ConstraintLayout>