<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_item"
    android:layout_width="match_parent"
    android:padding="@dimen/margin_small"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/recycler_itemImage"
        android:layout_width="@dimen/list_item_image_size"
        android:layout_height="@dimen/list_item_with_image_height"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/txtView_Adapter_item_muscleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtView_Adapter_item_muscleGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/muscle_group"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/recycler_itemImage"
        app:layout_constraintTop_toTopOf="@+id/recycler_itemImage"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_itemImage"/>

    <TextView
        android:id="@+id/txtView_Adapter_guion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guion"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtView_Adapter_item_muscleGroup"
        app:layout_constraintStart_toEndOf="@id/txtView_Adapter_item_muscleGroup"
        app:layout_constraintTop_toTopOf="@id/txtView_Adapter_item_muscleGroup" />

    <TextView
        android:id="@+id/txtView_Adapter_exercise_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise"
        android:layout_marginStart="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/txtView_Adapter_guion"
        app:layout_constraintStart_toEndOf="@+id/txtView_Adapter_guion"
        app:layout_constraintTop_toTopOf="@id/txtView_Adapter_guion" />

</androidx.constraintlayout.widget.ConstraintLayout>